# amr-lmpcc

./: .gitignore  CMakeLists.txt  README.md  lmpcc.rosinstall
base_moveit_controller_manager/: CMakeLists.txt  base_moveit_controller_manager_plugin_description.xml  package.xml
base_moveit_controller_manager/include/base_moveit_controller_manager/: base_moveit_controller.h  base_moveit_controller_manager.h
base_moveit_controller_manager/include/tkspline/: spline.h
base_moveit_controller_manager/src/: Clothoid.cpp  base_moveit_controller.cpp  base_moveit_controller_manager.cpp  spline.cpp
costmap_2d/launch/: example.launch  example_params.yaml
jackal_moveit_description/: .setup_assistant  CMakeLists.txt  package.xml
jackal_moveit_description/config/: controllers.yaml  fake_controllers.yaml  jackal.srdf  kinematics.yaml  ompl_planning.yaml  sensors_jackal.yaml
jackal_moveit_description/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  jackal_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  robot_move_group.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
jackal_simulator/jackal_gazebo/: .qglviewer.xml
jackal_simulator/jackal_gazebo/launch/: animated_world.launch  jackal_animated_world.launch  jackal_rviz.launch  jackal_sensor.launch  jackal_static.launch  jackal_world.launch  static_world.launch
jackal_simulator/jackal_gazebo/worlds/: animated.world  cyberzoo.sdf  jackal_race.world  static.world  static2.world
lmpcc/: .gitignore  CMakeLists.txt  FindACADO.cmake  README.md  lmpcc.rosinstall  package.xml  setup.py
lmpcc/action/: move.action  traj.action
lmpcc/cfg/: Lmpcc.cfg  Lmpcc.cfg.orig
lmpcc/config/: lmpcc_config_parameter.yaml  lmpcc_config_parameter.yaml.orig  lmpcc_config_parameter.yaml~  lmpcc_config_parameter_BASE_26854.yaml  lmpcc_config_parameter_REMOTE_26854.yaml  local_map_params.yaml  local_map_params.yaml~
lmpcc/include/lmpcc/: Clothoid.h  lmpcc_configuration.h  lmpcc_controller.h  lmpcc_controller.h.orig  reference_path.h  static_environment.h
lmpcc/include/lmpcc/ocp/: acado_common.h  acado_common.h.orig  acado_qpoases_interface.hpp
lmpcc/include/tkspline/: spline.h
lmpcc/launch/: lmpcc.launch  lmpcc.launch.orig  lmpcc.launch~  robot_lmpcc.launch
lmpcc/rviz_config/: dwa.rviz  rviz_config.rviz  rviz_config.rviz.orig
lmpcc/scripts/: __init__.py  cadrl_client.py  move_base_client.py  move_base_client.py.orig  predictions_3d.py
lmpcc/src/: Clothoid.cpp  lmpcc_configuration.cpp  lmpcc_controller.cpp  lmpcc_controller.cpp.orig  lmpcc_node.cpp  reference_path.cpp  spline.cpp  static_environment.cpp
lmpcc/src/generated_mpc/: acado_hessian_regularization.c  acado_integrator.c  acado_qpoases_interface.cpp  acado_solver.c
lmpcc/src/ocp/: Makefile  acado_hessian_regularization.c  acado_integrator.c  acado_qpoases_interface.cpp  acado_solver.c  acado_solver.c.orig  acado_solver_mex.c  make_acado_solver.m
lmpcc_msgs/: CMakeLists.txt  package.xml
lmpcc_msgs/msg/: lmpcc_feedback.msg  lmpcc_obstacle.msg  lmpcc_obstacle_array.msg
lmpcc_msgs/srv/: IntTrigger.srv
lmpcc_obstacle_feed/: .gitignore  CMakeLists.txt  package.xml
lmpcc_obstacle_feed/cfg/: ObstacleFeed.cfg
lmpcc_obstacle_feed/config/: lmpcc_obstacle_feed_config.yaml  lmpcc_obstacle_feed_config.yaml.orig
lmpcc_obstacle_feed/include/lmpcc_obstacle_feed/: lmpcc_obstacle_feed.h  lmpcc_obstacle_feed_configuration.h  lmpcc_obstacle_feed_configuration.h.orig  obstacle_prediction.h
lmpcc_obstacle_feed/launch/: lmpcc_obstacle_feed.launch  map_lmpcc_obstacle_feed.launch  map_obstacle_feed.launch~
lmpcc_obstacle_feed/maps/: corridor.yaml  cyberzoo.yaml  cyberzoo_box.yaml  cyberzoo_rect.yaml  cyberzoo_smallbox.yaml  cyberzoo_twobox.yaml  cyberzoo_twoboxes.yaml  faculty.yaml  free_space_map.yaml  static_map.yaml  two_walls.yaml
lmpcc_obstacle_feed/src/: lmpcc_obstacle_feed.cpp  lmpcc_obstacle_feed.cpp.orig  lmpcc_obstacle_feed_configuration.cpp  lmpcc_obstacle_feed_configuration.cpp.orig  lmpcc_obstacle_feed_node.cpp  obstacle_prediction.cpp
mobile_robot_state_publisher/: CMakeLists.txt~  package.xml
mobile_robot_state_publisher/config/: jackal.yaml  prius.yaml
mobile_robot_state_publisher/include/mobile_robot_state_publisher/: mobile_robot_state_publisher.h
mobile_robot_state_publisher/launch/: mobile_robot_publisher.launch
mobile_robot_state_publisher/src/: mobile_robot_state_publisher_node.cpp  mobile_robot_state_publisher_node.cpp~
static_collision_avoidance/: CMakeLists.txt  package.xml
static_collision_avoidance/config/: local_map_params.yaml  static_avoidance_config.yaml
static_collision_avoidance/include/static_collision_avoidance/: static_environment.h
static_collision_avoidance/launch/: static_collision_avoidance.launch
static_collision_avoidance/msg/: collision_free_polygon.msg
static_collision_avoidance/src/: static_collision_avoidance_node.cpp  static_environment.cpp
