<package format="2">
  <name>base_moveit_controller_manager</name>
  <version>0.0.1</version>
  <description>A whole body controller plugin for MoveIt.</description>

  <author email="brunoffbrito0@gmail.com">Bruno Brito</author>

  <maintainer email="brunoffbrito0@gmail.com">Bruno Brito</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>moveit_fake_controller_manager</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>pluginlib</depend>
  <depend>lmpcc</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>trajectory_msgs</depend>

  <exec_depend>geometry_msgs</exec_depend>
  
  <export>
    <moveit_core plugin="${prefix}/base_moveit_controller_manager_plugin_description.xml"/>
  </export>

</package>
